--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "homepage": "https://github.com/morganherlocker/turf-point",
   "devDependencies": [
     "tape"
-  ]
+  ],
+  "dependencies": {
+    "minimist": "^0.2.0"
+  },
+  "bin": "bin/point.js"
 }
